--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,4 @@
-certifi == 2021.10.8
-click == 8.0.4
-colorama == 0.4.4
-distlib == 0.3.4
-dj-database-url == 0.5.0
-filelock == 3.4.2
-Flask == 2.0.3
-Flask-Cors == 3.0.10
-gunicorn == 20.1.0
-itsdangerous == 2.1.0
-Jinja2 == 3.0.3
-joblib == 1.1.0
-MarkupSafe == 2.1.0
-numpy == 1.22.2
-pandas == 1.4.0
-Pillow == 9.0.1
-pip == 20.2.3
-platformdirs == 2.4.1
-psycopg2 == 2.9.3
-python-dateutil == 2.8.2
-pytz == 2021.3
-scikit-learn == 1.0.2
-scipy == 1.8.0
-setuptools == 49.2.1
-six == 1.16.0
-sklearn == 0.0
-sqlparse == 0.4.2
-threadpoolctl == 3.1.0
-tzdata == 2021.5
-virtualenv == 20.13.0
-virtualenv-clone == 0.5.7
-Werkzeug == 2.0.3
-wheel == 0.37.1
-whitenoise == 5.3.0
-wincertstore == 0.2
+streamlit
+plotly
+seaborn
+matplotlib
